# mx-agentic-commerce-tests

./: .gitignore  Cargo.toml  README.md  package.json  run_all_tests.sh  setup.sh  test_plan.md  tsconfig.json  vitest.config.ts
.cargo/: config.toml
.github/workflows/: integration-tests.yml
src/: lib.rs  process_manager.rs
tests/: mpp-402.test.ts  mpp-e2e.test.ts  mpp-payment.test.ts  pkg_1_identity.rs  pkg_3_reputation.rs  pkg_4_facilitator.rs  pkg_5_mcp.rs  pkg_8_escrow.rs  suite_a_identity.rs  suite_aa_mpp_facilitator_resources.rs  suite_d_facilitator.rs  suite_e2_moltbot_update.rs  suite_e_moltbot_lifecycle.rs  suite_ec_facilitator_down.rs  suite_f_multi_agent.rs  suite_g_mcp_features.rs  suite_h_relayed_registration.rs  suite_i_relayed_agent_ops.rs  suite_j_relayed_facilitator_settle.rs  suite_k_relayed_moltbot_lifecycle.rs  suite_l_mcp_agent_discovery.rs  suite_m_agent_to_agent_flow.rs  suite_n_reputation_validation.rs  suite_o_mcp_tool_coverage.rs  suite_p_identity_extended.rs  suite_q_validation_extended.rs  suite_r_reputation_extended.rs  suite_s_full_economy_loop.rs  suite_session_extended.rs  suite_session_simulator.rs  suite_t_mcp_extended.rs  suite_u2_facilitator_advanced.rs  suite_u_facilitator_extended.rs  suite_v2_relayer_advanced.rs  suite_v3_relayer_quota.rs  suite_v_relayer_extended.rs  suite_w_moltbot_extended.rs  suite_x_e2e_lifecycle.rs  suite_y_e2e_flows.rs  suite_z_mpp_facilitator.rs
tests/common/: escrow_interactor.rs  mod.rs  mpp_session_helpers.rs  services.rs  simulator.rs  test_env.rs
tests/fixtures/: mpp_middleware.ts  (+1 more)
(+47 files in other folders)
