[package]
name = "mx-agentic-commerce-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
multiversx-sc = "0.64.1"
multiversx-sc-derive = "0.64.1"
multiversx-sc-codec = "0.24.0"
multiversx-sc-scenario = "0.64.1" 
multiversx-sc-snippets = { version = "0.64.1", features = ["http"] }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.79"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
base64 = "0.21.7"
hex = "0.4.3"
rand = "0.8"
bech32 = "0.11.1"
futures = "0.3"
identity-registry-interactor = { version = "0.0.0", path = "../mx-8004/identity-registry/interactor" }
common = { path = "../mx-8004/common" }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

# Add path dependencies to the other crates if they are Rust crates
# mx-8004 = { path = "../mx-8004" } 

[dev-dependencies]
